--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -164,8 +164,8 @@
                         <option value="newspaper">Newspaper</option>
                         <option value="news agency">News Agency</option>
                         <option value="magazine">Magazine</option>
-                        <option value="tv show">TV Show</option>
-                        <option value="radio show">Radio Show</option>
+                        <option value="tv show">TV Show / TV Channel</option>
+                        <option value="radio show">Radio Show / Radio Channel</option>
                         <option value="podcast">Podcast</option>
                         <option value="news blog">News Blog</option>
                         <option value="alternative media">Alternative Media</option>
