added label for 'news sites'

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -167,6 +167,7 @@
                         <option value="tv show">TV Show / TV Channel</option>
                         <option value="radio show">Radio Show / Radio Channel</option>
                         <option value="podcast">Podcast</option>
+                        <option value="news site">News Site</option>
                         <option value="news blog">News Blog</option>
                         <option value="alternative media">Alternative Media</option>
                     </select>
