--- a/flaskinventory/templates/users/profile_sidebar.html
+++ b/flaskinventory/templates/users/profile_sidebar.html
@@ -9,8 +9,16 @@
         <a href="{{ url_for('add.new_entry') }}" type="button" class="list-group-item list-group-item-action">
             <i class="fas fa-plus-circle me-3 fa-fw"></i>Add new entry
         </a>
-        <a href="{{ url_for('review.overview') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_role < 2 %}disabled{% endif %}"><i class="fas fa-glasses me-3 fa-fw"></i>Review Entries</a>
-        <a href="{{ url_for('users.invite') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_role < 2 %}disabled{% endif %}"><i class="fas fa-envelope-open-text me-3 fa-fw"></i>Invite New User</a>
-        <a href="{{ url_for('users.admin_view') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_role < 10 %}disabled{% endif %}"><i class="fas fa-users-cog me-3 fa-fw"></i>Change User Permissions</a>
+        {% if current_user.user_role >= 2 %}
+        <a href="{{ url_for('review.overview') }}" type="button" class="list-group-item list-group-item-action"><i class="fas fa-glasses me-3 fa-fw"></i>Review Entries</a>
+        {% endif %}
+
+        {% if current_user.user_role >= 2 %}
+        <a href="{{ url_for('users.invite') }}" type="button" class="list-group-item list-group-item-action"><i class="fas fa-envelope-open-text me-3 fa-fw"></i>Invite New User</a>
+        {% endif %}
+        
+        {% if current_user.user_role >= 10 %}
+        <a href="{{ url_for('users.admin_view') }}" type="button" class="list-group-item list-group-item-action"><i class="fas fa-users-cog me-3 fa-fw"></i>Change User Permissions</a>
+        {% endif %}
     </div>
 </div>
