added link to github

--- a/flaskinventory/templates/not_implemented.html
+++ b/flaskinventory/templates/not_implemented.html
@@ -11,7 +11,7 @@
             <h2>Found a bug?</h2>
             <p>Something weird happened? Or a feature is not working as expected?</p>
             <ul class="icon-list">
-                <li>Raise an issue in our github repository</li>
+                <li>Raise an issue in <a href="https://github.com/opted-eu/wp3inventory" target="_blank">our github repository</a></li>
             </ul>
         </div>
 
