--- a/flaskinventory/templates/emails/verify.html
+++ b/flaskinventory/templates/emails/verify.html
@@ -1,4 +1,4 @@
-{% extents "emails/layout.html" %}
+{% extends "emails/layout.html" %}
 {% block content %}
 <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Welcome,</p>
 <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">You have just created an account on <a href="https://wp3.opted.eu">wp3.opted.eu</a>. Please verify your email address by following the link below.</p>
