--- a/flaskinventory/templates/emails/invitation.html
+++ b/flaskinventory/templates/emails/invitation.html
@@ -1,4 +1,4 @@
-{% extents "emails/layout.html" %}
+{% extends "emails/layout.html" %}
 {% block content %}
 <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Welcome,</p>
 <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">You have been invited to join the OPTED Work Package 3 Inventory. Click to create your new account!</p>
