--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %} {% block content %}
 
+
+
+<div class="row mt-5">
+    <div class="col-8">
 <h1>Detailed Guide for adding News Sources</h1>
 
 <p>Thank you for participating!</p>
@@ -99,5 +103,7 @@
 <p>Getting detailed information about the reach of a printed news source can be challenging. However, there are interest groups that collect such data and sometimes make it available for public.</p>
 <p>Visit the <a href="https://www.ifabc.org/members/full-member-list-alphabetically" target="_blank">International Federation of Audit Bureaux of Circulations</a> to find an appropriate source for many European countries. 
     E.g., for Austria the <a href="https://www.oeak.at/auflagedetails/" target="_blank">OEAK</a> or Germany the <a href="https://www.ivw.eu/print/print" target="_blank">IVW</a>.</p>
+</div>
+</div>
 
 {% endblock content %}
