--- a/flaskinventory/templates/main/imprint.html
+++ b/flaskinventory/templates/main/imprint.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %} {% block content %}
 
+
+<div class="row mt-5">
+    <div class="col-8">
 <h1 class="mb-4">Imprint</h1>
 
 <h2>Copyright</h2>
@@ -19,3 +22,6 @@ Kolingasse 14-16<br>
 1090 Vienna, Austria<br>
 info@opted.eu<br>
 </address> {% endblock content %}
+
+    </div>
+</div>
