#50 updated tom-select to version 2.0.0

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -325,7 +325,7 @@
         <div id="group-geographic-scope-single" class="mb-5 form-group" hidden>
             <label for="geographic-scope-single" class="form-label fw-bold fs-5">What is the national scope?</label>
             <select name="geographic_scope_single" id="geographic-scope-single" class="form-select form-select-lg" aria-describedby="geographic-scope-single-feedback" placeholder="Select one..." autocomplete="off">
-                <option></option>
+                <option value="">Select one...</option>
             </select>
             <small id="geographic-scope-single-helptext"></small>
             <div id="geographic-scope-single-feedback"></div>
