#27 changed guide to markdown format for easier maintainance

--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -4,106 +4,103 @@
 
 <div class="row mt-5">
     <div class="col-8">
-<h1>Detailed Guide for adding News Sources</h1>
+{% filter markdown %}
+# Detailed Guide for adding News Sources
 
-<p>Thank you for participating!</p>
+Thank you for participating!
 
-<p>Before you start, please carefully read the following instructions to
-    learn about the type of news sources we are looking for:</p>
+Before you start, please carefully read the following instructions to
+learn about the type of news sources we are looking for:
 
-<p>News texts are nowadays produced by diverse groups of actors and are
-    accessible in various formats and via various channels. For the OPTED
-    inventory of European news sources, we focus on a specific type of
-    news producing sources. Please carefully read the following
-    definition.</p>
+News texts are nowadays produced by diverse groups of actors and are
+accessible in various formats and via various channels. For the OPTED
+inventory of European news sources, we focus on a specific type of news
+producing sources. Please carefully read the following definition.
 
-<h3>By news sources, we mean sources that:</h3>
+### By news sources, we mean sources that:
 
-<ul>
-    <li>have the primary purpose to regularly report and comment on recent events and ideas</li>
-    <li>produce (self-create) textual content</li>
-    <li>claim to be non-fictional</li>
-    <li>can be regarded as a rather complex organisations and has
-        standardized practises (not a one-man or one women operation)</li>
-</ul>
+-   have the primary purpose to regularly report and comment on recent
+    events and ideas
+-   produce (self-create) textual content
+-   claim to be non-fictional
+-   can be regarded as a rather complex organisations and has
+    standardized practises (not a one-man or one women operation)
 
+### Important, we look for:
 
-<h3>Important, we look for:</h3>
+-   Sources mainly associated with EU countries + UK, Switzerland,
+    Norway, and Israel
+-   Sources that are actively publishing today.
+-   The channel counts: e.g., Spiegel print and spiegel online are
+    listed as separate sources
+-   Various regional print editions are included as separate sources if
+    the individual region is as wide-reaching as a country (e.g., 'Zeit'
+    and 'Zeit Österreich' are considered 2 separate sources). If the
+    regions are subnational units, only the main source is included
+    (e.g., 'Badische Zeitung' had 9 editions for small geographic units
+    (e.g. Badische Zeitung Elztal', 'Badische Zeitung Freiburg'), it is
+    only included once as 'Badische Zeitung' in the inventory.
+-   Various social media accounts of a news source are included
+    asseparate sources
+-   Please provide information about the sources that are correct for
+    the moment (to the best of your knowledge) in which you enter the
+    information.
 
-<ul>
-    <li>Sources mainly associated with EU countries + UK, Switzerland, Norway, and Israel</li>
-    <li>Sources that are actively publishing today.</li>
-    <li>The channel counts: e.g., Spiegel print and spiegel online are
-        listed as separate sources</li>
-    <li>Various regional print editions are included as separate sources if
-        the individual region is as wide-reaching as a country (e.g., ‘Zeit’
-        and ‘Zeit Österreich’ are considered 2 separate sources). If
-        the regions are subnational units, only the main source is included
-        (e.g., ‘Badische Zeitung’ had 9 editions for small geographic
-        units (e.g. Badische Zeitung Elztal’, ‘Badische Zeitung
-        Freiburg’), it is only included once as ‘Badische Zeitung’ in
-        the inventory.</li>
-    <li>Various social media accounts of a news source are included asseparate sources </li>
+### More specifically the inventory includes:
 
-    <li>Please provide information about the sources that are correct for the moment (to the best of your knowledge) in which you enter the
-        information. </li>
+-   Print news sources
+-   Online news sources
+-   Websites that provide transcripts to self-created audiovisual
+    contents (tv, radio, or podcasts)
+-   News agencies (e.g., Reuters, AFP, AP)
+-   Social media accounts providing news, self-created textual content
+-   Messaging apps providing news, self-created textual content
+-   Sources for multinational audiences (e.g.,
+    [www.euronews.com](https://www.euronews.com/)), national audiences (e.g.,
+    [www.derstandard.at](https://www.derstandard.at/)), and subnational audiences (i.e., for
+    a region or city, e.g., [www.standard.co.uk](https://www.standard.co.uk/))
+-   News blogs that are published by a group of people (i.e. different
+    authors, appears to be created with editorial support, see for
+    example
+    [www.nachdenkseiten.de](https://www.nachdenkseiten.de/),
+    [globalvoices.org](https://globalvoices.org/))
+-   Alternative news media sources (i.e., propagate that they provide an
+    alternative view in contrast to mainstream media, e.g.,
+    [order-order.com](https://order-order.com/) )
 
-</ul>
+### Please note, the inventory does not include:
 
+-   News aggregation sites (e.g. Google news, Apple News, Upday,
+    Flipboard)
+-   Citizen journalism (i.e., news blogs by individuals, without any
+    notion of editorial control)
+-   Sources clearly related to corporations, foundations, think tanks,
+    universities, advocacy groups (often .org website urls)
+-   Sources with a main focus on celebrities, sport, travel, music,
+    arts, movies, event announcements, highly specific industries
+-   Social media accounts only sharing news that were created by others
+    (e.g., a private account sharing links to articles from a newspaper)
+-   Collective political actors (e.g., parties, governments) and
+    (political) advertisement/public relations
 
-<h3>More specifically the inventory includes:</h3>
+## List of credible resources
 
-<ul>
-    <li>Print news sources </li>
+We provide a curated and growing list of resources that we found useful
+for adding entries to the inventory.
 
-    <li>Online news sources </li>
+### Audience Size for Print Newspapers
 
-    <li>Websites that provide transcripts to self-created audiovisual
-        contents (tv, radio, or podcasts)</li>
-    <li>News agencies (e.g., Reuters, AFP, AP)</li>
-    <li>Social media accounts providing news, self-created textual content</li>
-    <li>Messaging apps providing news, self-created textual content</li>
-    <li>Sources for multinational audiences (e.g.,
-        <a target="_blank" href="https://www.euronews.com/">https://www.euronews.com/</a>), national audiences (e.g.,
-        <a target="_blank" href="https://www.derstandard.at/">https://www.derstandard.at/</a>), and subnational
-        audiences (i.e., for a
-        region or city, e.g., <a target="_blank" href="https://www.standard.co.uk/">https://www.standard.co.uk/</a>)
-    </li>
-    <li>News blogs that are published by a group of people (i.e. different authors, appears to be created with editorial support, see for
-        example <a target="_blank" href="https://www.nachdenkseiten.de/">https://www.nachdenkseiten.de</a>,
-        <a target="_blank" href="https://globalvoices.org/">https://globalvoices.org/</a>)
-    </li>
-    <li> Alternative news media sources (i.e., propagate that they provide an alternative view in contrast to mainstream media, e.g.,
-        <a target="_blank" href="https://order-order.com/">https://order-order.com/</a>
-        )
-    </li>
-</ul>
+Getting detailed information about the reach of a printed news source
+can be challenging. However, there are interest groups that collect such
+data and sometimes make it available for public.
 
-
-<h3>Please note, the inventory does not include:</h3>
-
-<ul>
-    <li> News aggregation sites (e.g. Google news, Apple News, Upday, Flipboard)</li>
-    <li> Citizen journalism (i.e., news blogs by individuals, without any
-        notion of editorial control)</li>
-    <li> Sources clearly related to corporations, foundations, think tanks, universities, advocacy groups (often .org website urls)</li>
-    <li> Sources with a main focus on celebrities, sport, travel, music, arts, movies, event announcements, highly specific industries
-    </li>
-    <li> Social media accounts only sharing news that were created by others
-        (e.g., a private account sharing links to articles from a newspaper)</li>
-        <li>Collective political actors (e.g., parties, governments) and (political) advertisement/public relations</li>
-</ul>
-
-<h2>List of credible resources</h2>
-
-<p>We provide a curated and growing list of resources that we found useful for adding entries to the inventory.</p>
-
-<h3>Audience Size for Print Newspapers</h3>
-
-<p>Getting detailed information about the reach of a printed news source can be challenging. However, there are interest groups that collect such data and sometimes make it available for public.</p>
-<p>Visit the <a href="https://www.ifabc.org/members/full-member-list-alphabetically" target="_blank">International Federation of Audit Bureaux of Circulations</a> to find an appropriate source for many European countries. 
-    E.g., for Austria the <a href="https://www.oeak.at/auflagedetails/" target="_blank">OEAK</a> or Germany the <a href="https://www.ivw.eu/print/print" target="_blank">IVW</a>.</p>
-</div>
+Visit the [International Federation of Audit Bureaux of
+Circulations](https://www.ifabc.org/members/full-member-list-alphabetically)
+to find an appropriate source for many European countries. E.g., for
+Austria the [OEAK](https://www.oeak.at/auflagedetails/) or Germany the
+[IVW](https://www.ivw.eu/print/print).
+{% endfilter %}
+    </div>
 </div>
 
 {% endblock content %}
