--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -20,6 +20,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [CIM](https://www.cim.be/): Information about media circulation and reach (Belgium)
 - [Danske Medier](https://danskemedier.dk/branchefakta/medieforbrug/oplagskontrol/): Information about media circulation and reach (Denmark)
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
+- [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finland)
 
 ## Media Organizations and Ownership
 
