--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -34,7 +34,7 @@
             labelField: 'name',
             searchField: 'name',
             load: function(query, callback) {
-                var url = "{{ url_for('view.quicksearch') }}" + "?q=" + encodeURIComponent(query);
+                var url = "{{ url_for('endpoint.quicksearch') }}" + "?q=" + encodeURIComponent(query);
                 fetch(url)
                     .then(response => response.json())
                     .then(json => {
@@ -74,9 +74,11 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="{{ url_for('users.profile') }}" tabindex="-1"><i class="fas fa-id-badge me-2 fa-fw"></i>Profile</a></li>
                     {% if current_user.user_role >= 2 %}
-                    <li><a href="{{ url_for('users.my_entries') }}" class="dropdown-item" tabindex="-1">
-                        <i class="fas fa-tasks me-2 fa-fw"></i>My Entries
-                    </a></li>
+                    <li>
+                        <a href="{{ url_for('users.my_entries') }}" class="dropdown-item" tabindex="-1">
+                            <i class="fas fa-tasks me-2 fa-fw"></i>My Entries
+                        </a>
+                    </li>
                     <li><a class="dropdown-item" href="{{ url_for('review.overview') }}"><i class="fas fa-glasses me-2 fa-fw"></i>Review Entries</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('users.invite') }}"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>Invite New User</a></li>
                     {% endif %}
