--- a/flaskinventory/templates/helpers/_tomselect.html
+++ b/flaskinventory/templates/helpers/_tomselect.html
@@ -26,7 +26,7 @@
             selectOnTab: true,
             load: function(query, callback) {
                 if ( query.length < 3 ) return callback();
-                var url = '{{ url_for("add.sourcelookup") }}?q=' + encodeURIComponent(query);
+                var url = '{{ url_for("endpoint.sourcelookup") }}?q=' + encodeURIComponent(query);
                 fetch(url)
                 .then(response => response.json())
                 .then(json => {
@@ -80,7 +80,7 @@
             // createFilter: function(input) { return input.length >= 3 },
             load: function(query, callback) {
                 if ( query.length < 3 ) return callback();
-                var url = '{{ url_for("add.orglookup") }}?q=' + encodeURIComponent(query);
+                var url = '{{ url_for("endpoint.orglookup") }}?q=' + encodeURIComponent(query);
                 fetch(url)
                 .then(response => response.json())
                 .then(json => {
@@ -138,7 +138,7 @@
         },
         load: function(query, callback) {
             if ( query.length < 3 ) return callback();
-            var url = '{{ url_for("add.sourcelookup") }}?q=' + encodeURIComponent(query);
+            var url = '{{ url_for("endpoint.sourcelookup") }}?q=' + encodeURIComponent(query);
             fetch(url)
             .then(response => response.json())
             .then(json => {
