--- a/flaskinventory/templates/review/overview.html
+++ b/flaskinventory/templates/review/overview.html
@@ -1,63 +1,65 @@
 {% extends "layout.html" %} {% block content %}
 <div class="border rounded p-3">
-<h3 class="mb-4">Entries for Review</h3>
+    <h3 class="mb-4">Entries for Review</h3>
 
-<form method="POST" action="">
-  {{ form.hidden_tag() }}
-  <div class="row mb-4 align-items-end">
-      <div class="col-4">
-          {{ form.entity.label(class="form-label") }}
-          <div class="invalid-feedback">
-              Please select one type.
-          </div>
-          {{ form.entity(class="form-select") }}
-      </div>
-      <div class="col-4">
-          {{ form.country.label(class="form-label") }}
-          <div class="invalid-feedback">
-              Please select one type.
-          </div>
-          {{ form.country(class="form-select") }}
-      </div>
-    <div class="col-4">
-      {{ form.submit(class="btn btn-primary me-4") }}
-      </div>
-  </div>
-</form>
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <div class="row mb-4 align-items-end">
+            <div class="col-4">
+                {{ form.entity.label(class="form-label") }}
+                <div class="invalid-feedback">
+                    Please select one type.
+                </div>
+                {{ form.entity(class="form-select") }}
+            </div>
+            <div class="col-4">
+                {{ form.country.label(class="form-label") }}
+                <div class="invalid-feedback">
+                    Please select one type.
+                </div>
+                {{ form.country(class="form-select") }}
+            </div>
+            <div class="col-4">
+                {{ form.submit(class="btn btn-primary me-4") }}
+            </div>
+        </div>
+    </form>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Type</th>
-      <th scope="col">uid</th>
-      <th scope="col">Country</th>
-      <th scope="col">Added</th>
-      <th scope="col">User</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-  
-    {% if entries %}
-    {% for entry in entries %}
-    <tr>
-        <td><span class="d-inline-block text-truncate" style="max-width: 250px;" title="{{ entry.name }} ({{ entry.unique_name }})">{{ entry.name }}</span></td>
-        <td>{{ entry.get("dgraph.type")[0] }}</td>
-        <td>{{ entry.uid }}</th>
-        <td>{% if entry.get('country') %} {% for country in entry.get('country') %}
-            {{ country.get("name") }} 
-            {% endfor %}{% endif %}
-        </th>
-        <td>{% if entry.entry_added.get("entry_added|timestamp") %}{{ entry.entry_added.get("entry_added|timestamp").strftime('%d-%m-%Y') }}{% endif %}</td>
-        <td>{{ entry.entry_added.get("user_displayname") }}</td>
-        <td><div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('review.entry', uid=entry.get('uid'))}}">Review</a></div></td>
-    </tr>
-    {% endfor %}
-    {% endif %}
-    </tbody>
-</table>
-  
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Type</th>
+                <th scope="col">Country</th>
+                <th scope="col">Added</th>
+                <th scope="col">User</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            {% if entries %} {% for entry in entries %}
+            <tr>
+                <td>
+                    <span class="d-inline-block text-truncate" style="max-width: 250px;" title="{{ entry.name }} {% if entry.get('channel') %} ({{ entry.channel.name }}) {% endif %} <{{ entry.unique_name }}>">
+                    {{ entry.name }}
+                    {% if entry.get('channel') %} <small>({{ entry.channel.name }})</small>
+                    {% endif %}
+                </span>
+                </td>
+                <td>{{ entry.get("dgraph.type")[0] }}</td>
+                <td>{% if entry.get('country') %} {% for country in entry.get('country') %} {{ country.get("name") }} {% endfor %}{% endif %}
+                    </th>
+                    <td>{% if entry.entry_added.get("entry_added|timestamp") %}{{ entry.entry_added.get("entry_added|timestamp").strftime('%d-%m-%Y') }}{% endif %}</td>
+                    <td>{{ entry.entry_added.get("user_displayname") }}</td>
+                    <td>
+                        <div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('review.entry', uid=entry.get('uid'))}}">Review</a></div>
+                    </td>
+            </tr>
+            {% endfor %} {% endif %}
+        </tbody>
+    </table>
+
 
 </div>
-    {% endblock content %} {% block sidebar %} {% include "users/profile_sidebar.html" %} {% endblock sidebar %}
+{% endblock content %} {% block sidebar %} {% include "users/profile_sidebar.html" %} {% endblock sidebar %}
