#27 added UK & Belgium company registries

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -30,7 +30,9 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Media Info](https://media.info/): Information about media companies (UK, Ireland, Australia)
 - [Aurelia](https://aurelia.bvdinfo.com/): Detailed information about companies: employees, turnover, date of incorporation, etc. (Austria)
 - [FirmenABC](https://www.firmenabc.at/): Information about companies / registrated businesses (Austria)
+- [BCE](https://kbopub.economie.fgov.be/kbopub/zoeknaamfonetischform.html): Company registry, lookup financial statements, audited accounts (Belgium)
 - [KEK-Online](https://www.kek-online.de/service/verlinkungen): Ownership database of news sources (Germany)
+- [Find and update company information](https://find-and-update.company-information.service.gov.uk/): Company registry, lookup financial statements, date of incorporation, ownerships of companies (United Kingdom)
 
 ## Press Councils
 - [Alliance of Independent Press Councils of Europe](https://presscouncils.eu/Comparative-data-on-media-councils): Press Council Interest Group, providing information on member's press councils (e.g. budgeting, scale)
